openshift/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cloud-app-service
spec:
  selector:
    app: cloud-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
