openshift/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cloud-route
spec:
  to:
    kind: Service
    name: cloud-app-service
  port:
    targetPort: 8080
  tls:
    termination: edge
    wildcardPolicy: None
